--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "iTerm2-Color-Schemes"]
 	path = iTerm2-Color-Schemes
 	url = https://github.com/mbadolato/iTerm2-Color-Schemes.git
+[submodule "cool-peco"]
+	path = cool-peco
+	url = https://github.com/ryoppy/cool-peco.git
