--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,18 @@ setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
+bind m \
+  set -g mode-mouse on \;\
+  set -g mouse-select-pane on \;\
+  set -g mouse-resize-pane on \;\
+  set -g mouse-select-window on \;\
+  display 'Mouse: ON'
+bind M \
+  set -g mode-mouse off \;\
+  set -g mouse-select-pane off \;\
+  set -g mouse-resize-pane off \;\
+  set -g mouse-select-window off \;\
+  display 'Mouse: OFF'
 
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
@@ -79,4 +91,17 @@ setw -g monitor-activity on
 set -g visual-activity on
 ## ステータスバーを上部に表示する
 set -g status-position top
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
