--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,7 +56,7 @@ setw -g window-status-bg default
 setw -g window-status-attr dim
 # アクティブなウィンドウを目立たせる
 setw -g window-status-current-fg white
-setw -g window-status-current-bg colour88
+setw -g window-status-current-bg blue
 setw -g window-status-current-attr bright
 
 # ペインボーダーの色を設定する
