--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,89 +19,91 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # C-a*2でtmux内のプログラムにC-aを送る
 bind C-a send-prefix
 
-# H でペインを縦に分割する
-bind H split-window -h
+# V でペインを縦に分割する
+bind V split-window -h
 
-# V でペインを横に分割する
-bind V split-window -v
+# H でペインを横に分割する
+bind H split-window -v
 
 # マウス操作を有効にする
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
-bind m \
-  set -g mode-mouse on \;\
-  set -g mouse-select-pane on \;\
-  set -g mouse-resize-pane on \;\
-  set -g mouse-select-window on \;\
-  display 'Mouse: ON'
-bind M \
-  set -g mode-mouse off \;\
-  set -g mouse-select-pane off \;\
-  set -g mouse-resize-pane off \;\
-  set -g mouse-select-window off \;\
-  display 'Mouse: OFF'
+set-option -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+#setw -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
+#bind m \
+#  set -g mode-mouse on \;\
+#  set -g mouse-select-pane on \;\
+#  set -g mouse-resize-pane on \;\
+#  set -g mouse-select-window on \;\
+#  display 'Mouse: ON'
+#bind M \
+#  set -g mode-mouse off \;\
+#  set -g mouse-select-pane off \;\
+#  set -g mouse-resize-pane off \;\
+#  set -g mouse-select-window off \;\
+#  display 'Mouse: OFF'
 
 # 256色端末を使用する
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 
 # ステータスバーの色を設定する
-set -g status-fg white
-set -g status-bg black
+#set -g status-fg white
+#set -g status-bg black
 
 # ウィンドウリストの色を設定する
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+#setw -g window-status-fg cyan
+#setw -g window-status-bg default
+#setw -g window-status-attr dim
 # アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg white
-setw -g window-status-current-bg blue
-setw -g window-status-current-attr bright
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg blue
+#setw -g window-status-current-attr bright
 
 # ペインボーダーの色を設定する
-set -g pane-border-fg green
-set -g pane-border-bg black
+#set -g pane-border-fg green
+#set -g pane-border-bg black
 # アクティブなペインを目立たせる
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg yellow
 
-# コマンドラインの色を設定する
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+## コマンドラインの色を設定する
+#set -g message-fg white
+#set -g message-bg black
+#set -g message-attr bright
 
 # 文字コード
-set-window-option -g utf8 on
+#set-window-option -g utf8 on
 
 # ステータスバーを設定する
 ## 左パネルを設定する
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+#set -g status-left-length 40
+#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 ## 右パネルを設定する
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+#set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
 ## ステータスバーのUTF-8サポートを有効にする
-set -g status-utf8 on
+#set -g status-utf8 on
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 1
+#set -g status-interval 1
 ## ウィンドウリストの位置を中心寄せにする
-set -g status-justify centre
+#set -g status-justify centre
 ## ヴィジュアルノーティフィケーションを有効にする
-setw -g monitor-activity on
-set -g visual-activity on
+#setw -g monitor-activity on
+#set -g visual-activity on
 ## ステータスバーを上部に表示する
 set -g status-position top
 
 # Use vim keybindings in copy mode
-setw -g mode-keys vi
+#setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
