--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,7 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 
 # 256色端末を使用する
 #set -g default-terminal "screen-256color"
+set -g default-terminal "xterm"
 
 # ステータスバーの色を設定する
 #set -g status-fg white
@@ -100,10 +101,18 @@ set -g status-position top
 # Setup 'v' to begin selection as in Vim
 #bind-key -t vi-copy v begin-selection
 #bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Update default binding of `Enter` to also use copy-pipe
 #unbind -t vi-copy Enter
 #bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# スクロールで遡れる量を増やす
+set-option -g history-limit 10000
+
+# mouse scroll を遅くする
+set -g @scroll-speed-num-lines-per-scroll 1
+
 
