--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,9 @@ bind V split-window -h
 # H でペインを横に分割する
 bind H split-window -v
 
+# 遡れる出力を増やす
+set-option -g history-limit 50000
+
 # マウス操作を有効にする
 set-option -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
